# minecraft-mcp-aws-ecs-fargate

./: .gitignore  .tool-versions  LICENSE  README.md  claude-desktop-mcp.json.example  env.example
cdk/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  requirements.txt
cdk/cdk-out-fix/: MinecraftCDKStack.assets.json  MinecraftCDKStack.template.json  manifest.json  tree.json
cdk/minecraft_stack/: __init__.py  ec2_proxy.py  ecs.py  load_balancer.py  minecraft_stack.py  monitoring.py  networking.py  storage.py
rcon-tool/: README.md  pyproject.toml  rcon.py  resource_detector.py
scripts/: ecs-exec.sh  minecraft-manager.sh  resource_detector.sh
terraform/: .terraform.lock.hcl  README.md  main.tf  variables.tf
terraform/modules/backup/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: variables.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/load-balancer/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
