[project]
name = "rcon-tool"
version = "0.1.0"
description = "Minecraft RCON MCP Server for AWS ECS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

# [project.scripts]
# minecraft-rcon-mcp = "rcon:main"  # MCP server is run directly via python rcon.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
